# ProjectMill

./: Pipfile  README.md  main.py  pyproject.toml
data/: db.json
models/: person.py  project.py  task.py  user.py
tests/: test_models.py  test_storage.py
utils/: display.py  helpers.py  storage.py
